--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,20 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
+    "@vis.gl/react-google-maps": "^0.7.1",
+    "autosuggest": "^0.0.2",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.6.7",
+    "google-map-react": "^2.2.1",
     "next": "14.1.0",
+    "parse": "^4.3.1",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/autosuggest-highlight": "^3.2.3",
+    "@types/google-map-react": "^2.1.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
